{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 1684,
  "lineage": "b398ca05-f79e-7733-9e71-189344dcaff4",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_rails-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:loadbalancer/app/testing-alb-rails-terraform/9109805147a063ba",
            "arn_suffix": "app/testing-alb-rails-terraform/9109805147a063ba",
            "dns_name": "testing-alb-rails-terraform-1155255640.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:loadbalancer/app/testing-alb-rails-terraform/9109805147a063ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "testing-alb-rails-terraform",
            "security_groups": [
              "sg-035844cee7ed4dd9b",
              "sg-05a66fd7bb9ed695d",
              "sg-0640cebc2bdb08e2d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a27541c948e91091"
              },
              {
                "subnet_id": "subnet-0e0d9d4bd2cc8df18"
              }
            ],
            "subnets": [
              "subnet-0a27541c948e91091",
              "subnet-0e0d9d4bd2cc8df18"
            ],
            "tags": {
              "Environment": "testing",
              "Name": "testing-alb-rails_terraform"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rails_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:listener/app/testing-alb-rails-terraform/9109805147a063ba/df9fe61b0721fd16",
            "certificate_arn": "arn:aws:acm:ca-central-1:628132563466:certificate/cabc2dde-3976-4dc4-9000-0590bb28bb7c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:targetgroup/testing-alb-target-group-0aee/d26c790513235801",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:listener/app/testing-alb-rails-terraform/9109805147a063ba/df9fe61b0721fd16",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:loadbalancer/app/testing-alb-rails-terraform/9109805147a063ba",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.ecs.aws_alb.alb_rails-terraform",
            "module.ecs.aws_alb_target_group.alb_target_group",
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:targetgroup/testing-alb-target-group-0aee/d26c790513235801",
            "arn_suffix": "targetgroup/testing-alb-target-group-0aee/d26c790513235801",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:628132563466:targetgroup/testing-alb-target-group-0aee/d26c790513235801",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "testing-alb-target-group-0aee",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:security-group/sg-0d81d03c18b26e083",
            "description": "Allow egress from container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d81d03c18b26e083",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "testing-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "628132563466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "Name": "testing-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:security-group/sg-05a66fd7bb9ed695d",
            "description": "Allow HTTP from Anywhere into ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a66fd7bb9ed695d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "testing-web-inbound-sg",
            "name_prefix": "",
            "owner_id": "628132563466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-web-inbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ea2bfb83b2ad4d17",
            "domain": "vpc",
            "id": "eipalloc-0751daa4faca39a35",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0feee9d998048ff30",
            "private_dns": "ip-10-0-1-58.ca-central-1.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-3-97-179-217.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.179.217",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:internet-gateway/igw-0c928a5b996056cca",
            "id": "igw-0c928a5b996056cca",
            "owner_id": "628132563466",
            "tags": {
              "Environment": "testing",
              "Name": "testing-igw"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0751daa4faca39a35",
            "id": "nat-01c00f9457d1f014d",
            "network_interface_id": "eni-0feee9d998048ff30",
            "private_ip": "10.0.1.58",
            "public_ip": "3.97.179.217",
            "subnet_id": "subnet-0e0d9d4bd2cc8df18",
            "tags": {
              "Environment": "testing",
              "Name": "testing-ca-central-1b-nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0138382c5a1d103581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01c00f9457d1f014d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0138382c5a1d10358",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c928a5b996056cca",
            "id": "r-rtb-01b9fff030e6e25751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b9fff030e6e2575",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0138382c5a1d10358",
            "owner_id": "628132563466",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c00f9457d1f014d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "Name": "testing-private-route-table"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01b9fff030e6e2575",
            "owner_id": "628132563466",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c928a5b996056cca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "Name": "testing-public-route-table"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c0eba7eef8ebe84",
            "route_table_id": "rtb-0138382c5a1d10358",
            "subnet_id": "subnet-065b97fe3fef353fc"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ee8e9f538b4ff33",
            "route_table_id": "rtb-0138382c5a1d10358",
            "subnet_id": "subnet-0c3859c2e054f3809"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f82e3317bf29272",
            "route_table_id": "rtb-01b9fff030e6e2575",
            "subnet_id": "subnet-0e0d9d4bd2cc8df18"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d36666aa3e236509",
            "route_table_id": "rtb-01b9fff030e6e2575",
            "subnet_id": "subnet-0a27541c948e91091"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:security-group/sg-0640cebc2bdb08e2d",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0640cebc2bdb08e2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "testing-default-sg",
            "name_prefix": "",
            "owner_id": "628132563466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:subnet/subnet-065b97fe3fef353fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-065b97fe3fef353fc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628132563466",
            "tags": {
              "Environment": "testing",
              "Name": "testing-ca-central-1a-private-subnet"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:subnet/subnet-0c3859c2e054f3809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0c3859c2e054f3809",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "628132563466",
            "tags": {
              "Environment": "testing",
              "Name": "testing-ca-central-1b-private-subnet"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:subnet/subnet-0e0d9d4bd2cc8df18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e0d9d4bd2cc8df18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628132563466",
            "tags": {
              "Environment": "testing",
              "Name": "testing-ca-central-1a-public-subnet"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:subnet/subnet-0a27541c948e91091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a27541c948e91091",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "628132563466",
            "tags": {
              "Environment": "testing",
              "Name": "testing-ca-central-1b-public-subnet"
            },
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:vpc/vpc-0f04e22c1bca691d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2bf93a7522a9eba",
            "default_route_table_id": "rtb-0a476c3f8eb7231fa",
            "default_security_group_id": "sg-0eed61443b7393635",
            "dhcp_options_id": "dopt-fadc8e92",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f04e22c1bca691d3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a476c3f8eb7231fa",
            "owner_id": "628132563466",
            "tags": {
              "Environment": "testing",
              "Name": "testing-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:security-group/sg-035844cee7ed4dd9b",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-035844cee7ed4dd9b",
            "ingress": [],
            "name": "testing-db-access-sg",
            "name_prefix": "",
            "owner_id": "628132563466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "Name": "testing-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:628132563466:security-group/sg-01d00864bd7ebf09e",
            "description": "testing Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d00864bd7ebf09e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035844cee7ed4dd9b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "testing-rds-sg",
            "name_prefix": "",
            "owner_id": "628132563466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "Name": "testing-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f04e22c1bca691d3"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    }
  ]
}